app/assets/stylesheets/articles.css.scss
// Place all the styles related to the articles controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

#article {
  margin-top: 10px;

  #article_top {
    padding-bottom: 10px;

    #article_image {
      width: 330px;
      margin-right: 10px;
      display: inline-block;

      img {
        max-width: 100%;
      }
    }

    #article_info {
      width: 330px;
      display: inline-block;
      vertical-align: top;
      height: 250px;
      position: relative;

      #article_title {
        font-size: 1.75em;
      }

      #article_author {
        margin-top: .5em;
        font-size: 1.15em; 
      }

      #article_date {
        margin-top: .5em;
      }

      #article_shares {
        position: absolute;
        bottom: 0px;
      }
    }
  }

  #article_body {
    margin-top: 10px;
    border-top: 1px solid #888888;
  }

  #article_bottom {
    min-height: 40px;
  }
}

nav.share {
  display:inline-block;
  margin: 0px auto;
}

nav.share div {
  display: inline-block;
  overflow:hidden;
}

nav.share iframe {
  border: 0px; 
  margin-top: 0px; 
  padding-top: 0px;
} 

#___plusone_0 {
  max-width: 70px; 
  font-size: default;
}

.twitter-share-button, .twitter-count-horizontal {
  max-width: 80px;
}

.fb_iframe_widget span { 
  vertical-align: top; 
}

.fb_edge_widget_with_comment { 
  vertical-align: top;
}

.fb-like {
  display: inline-block;
  vertical-align: top;
}

* html .fb-like{
  display: inline;
}

*+html .fb-like{
  display: inline;
}

